--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ enable_testing()
 add_compile_options("--coverage")
 add_executable(
   cleancode
+  PrintColorCode.cpp
+  PrintColorCode.Tests.cpp
   
 )
 target_link_libraries(
